@@ -209,6 +209,9 @@ http.server_port=8888
 
 http.trunk_size=256KB
 
+# if need find content type from file extension name
+http.need_find_content_type=true
+
 #use "#include" directive to include HTTP other settings
 ##include http.conf
 
