@@ -139,6 +139,9 @@ http.check_alive_type=tcp
 # NOTE: storage embed HTTP server support uri: /status.html
 http.check_alive_uri=/status.html
 
+# if need find content type from file extension name
+http.need_find_content_type=true
+
 #use "#include" directive to include http other settings
 ##include http.conf
 
